# howlongtobeat-adwaita-app

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  FIX_SUMMARY.md  INSTALL.md  ISSUE_15_FIX.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UI_DESIGN.md  meson.build  meson.options
.github/agents/: rules.yml
.github/workflows/: build.yml
build-aux/: meson_post_install.py
data/: com.github.justadreamerfl.HowLongToBeat.desktop  com.github.justadreamerfl.HowLongToBeat.metainfo.xml  meson.build
src/: api.rs  main.rs  meson.build  ui.rs
tests/: README.md  api_deserialization_tests.rs
