[package]
name = "howlongtobeat"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", package = "gtk4" }
libadwaita = { version = "0.7" }
glib = "0.20"
gio = "0.20"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
